Fix text wrap issues

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -30,7 +30,10 @@ main {
     margin-top: 80px;
 }
 
-footer {
-    position: fixed;
-    z-index: 1;
+a.text-wrap {
+    white-space: pre-wrap; /* CSS3 */    
+    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
+    white-space: -pre-wrap; /* Opera 4-6 */    
+    white-space: -o-pre-wrap; /* Opera 7 */    
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
